syntax = "proto3";

option go_package = "./pkg/apiclient/protoapi";

import "google/protobuf/timestamp.proto";

service AuditLogs {
  rpc Create(CreateAuditLogsRequest) returns (CreateAuditLogsResponse) {}
}

message CreateAuditLogsRequest {
  repeated AuditLogTarget targets = 1;
  string reconciler_name = 2;
  string correlation_id = 3;
  string action = 4;
  string message = 5;

  google.protobuf.Timestamp created_at = 7;
}

message CreateAuditLogsResponse {}

// AuditLogTarget is a union type that can be one of the following:
message AuditLogTarget {
  oneof AuditLogTargetType {
    string user = 1;
    string team_slug = 2;
    string generic = 3;
  }
}
